--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,16 @@ services:
       - redis-data:/data
     restart: always
 
+  redis-commander:
+      container_name: redis-commander
+      hostname: redis-commander
+      image: ghcr.io/joeferner/redis-commander:latest
+      restart: always
+      environment:
+      - REDIS_HOSTS=local:redis:6379
+      ports:
+      - "8081:8081"
+      user: redis
+
 volumes:
   redis-data:
